--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Build Android
 
-on: push
+on: 
+  push:
+    tags:
+      -v**
 
 jobs:  
   build:
@@ -41,6 +44,5 @@ jobs:
 
       - name: Upload dev APK
         uses: actions/upload-artifact@v3
-        with:
-          name: app-dev
+        with:          
           path: ./android/app/build/outputs/apk/debug/app-debug.apk
