--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,17 @@ jobs:
         uses: actions/upload-artifact@v3
         with:          
           path: ./android/app/build/outputs/apk/debug/app-debug.apk
+            
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}          
+          draft: false
+          prerelease: false
